--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -19,6 +19,8 @@ common warnings
 library
     import:           warnings
     exposed-modules:  Servant.Hateoas
+                    , Servant.Hateoas.Resource
+                    , Servant.Hateoas.ContentType
 
     build-depends:    base ^>=4.20.0.0
                     , servant
