--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -10,8 +10,11 @@ maintainer:         julian.bruder@outlook.com
 copyright:          © 2024 Julian Bruder
 category:           Servant, Web, REST, HATEOAS
 build-type:         Simple
+extra-source-files: README.md
 extra-doc-files:    CHANGELOG.md
--- extra-source-files:
+tested-with:        GHC == 9.4.8
+                  , GHC == 9.6.4
+                  , GHC == 9.8.2
 
 common warnings
     ghc-options: -Wall
