--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -25,6 +25,8 @@ library
                     , Servant.Hateoas.Resource
                     , Servant.Hateoas.ContentType
 
+    other-modules:    Servant.Hateoas.Example
+
     build-depends:    base ^>=4.20.0.0
                     , servant
                     , servant-server
@@ -32,11 +34,12 @@ library
                     , aeson
                     , text
     hs-source-dirs:   src
-    default-language: GHC2024
+    default-language: GHC2021
+    default-extensions:  DataKinds, TypeFamilies
 
 test-suite servant-hateoas-test
     import:           warnings
-    default-language: GHC2024
+    default-language: GHC2021
     -- other-modules:
     -- other-extensions:
     type:             exitcode-stdio-1.0
