--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -1,51 +1,50 @@
-cabal-version:      3.12
-name:               servant-hateoas
-version:            0.1.0.0
-synopsis:           HATEOAS extension for servant
--- description:
-license:            BSD-3-Clause
-license-file:       LICENSE
-author:             Julian Bruder
-maintainer:         julian.bruder@outlook.com
-copyright:          © 2024 Julian Bruder
-category:           Servant, Web, REST, HATEOAS
-build-type:         Simple
-extra-source-files: README.md
-extra-doc-files:    CHANGELOG.md
-tested-with:        GHC == 9.4.8
-                  , GHC == 9.6.4
-                  , GHC == 9.8.2
+cabal-version:           3.12
+name:                    servant-hateoas
+version:                 0.1.0.0
+synopsis:                HATEOAS extension for servant
+description:             Create Resource-Representations for your types and make your API HATEOAS-compliant. Generic Resource-construction where possible, manual where ypu want.
+license:                 BSD-3-Clause
+license-file:            LICENSE
+author:                  Julian Bruder
+maintainer:              julian.bruder@outlook.com
+copyright:               © 2024 Julian Bruder
+category:                Servant, Web, REST, HATEOAS
+build-type:              Simple
+extra-source-files:      README.md
+extra-doc-files:         CHANGELOG.md
+tested-with:             GHC == 9.4.8
+                       , GHC == 9.6.4
+                       , GHC == 9.8.2
 
 common warnings
-    ghc-options: -Wall
+    ghc-options:        -Wall
 
 library
-    import:           warnings
-    exposed-modules:  Servant.Hateoas
-                    , Servant.Hateoas.Some
-                    , Servant.Hateoas.Resource
-                    , Servant.Hateoas.ContentType.HAL
+    import:              warnings
 
-    other-modules:    Servant.Hateoas.Example
+    exposed-modules:     Servant.Hateoas
+                       , Servant.Hateoas.Some
+                       , Servant.Hateoas.Resource
+                       , Servant.Hateoas.ContentType.HAL
 
-    build-depends:    base                          >= 4.17.2 && < 5
-                    , servant
-                    , servant-server
-                    , http-media
-                    , aeson
-                    , text
-    hs-source-dirs:   src
-    default-language: GHC2021
+    other-modules:       Servant.Hateoas.Example
+
+    build-depends:       base                          >= 4.17.2 && < 5
+                       , aeson                         >= 2.2.3  && < 2.3
+                       , text                          >= 2.1.1  && < 2.2
+                       , http-media                    >= 0.8.1  && < 0.9
+                       , servant                       >= 0.20.2 && < 0.21
+                       , servant-server                >= 0.20.2 && < 0.21
+    hs-source-dirs:      src
+    default-language:    GHC2021
     default-extensions:  DataKinds, TypeFamilies
 
 test-suite servant-hateoas-test
-    import:           warnings
-    default-language: GHC2021
-    -- other-modules:
-    -- other-extensions:
-    type:             exitcode-stdio-1.0
-    hs-source-dirs:   test
-    main-is:          Main.hs
+    import:              warnings
+    default-language:    GHC2021
+    type:                exitcode-stdio-1.0
+    hs-source-dirs:      test
+    main-is:             Main.hs
     build-depends:
-                      base >= 4.17.2 && < 5
-                    , servant-hateoas
+                         base >= 4.17.2 && < 5
+                       , servant-hateoas
