some: replaced `SomeToJSON` with `SomeF HALResource ToJSON`

--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -28,7 +28,6 @@ library
     import:              warnings
 
     exposed-modules:     Servant.Hateoas
-                       , Servant.Hateoas.Some
                        , Servant.Hateoas.Resource
                        , Servant.Hateoas.ContentType.HAL
                        , Servant.Hateoas.ContentType.Collection
@@ -40,6 +39,7 @@ library
                        , http-media                    >= 0.8.1  && < 0.9
                        , servant                       >= 0.20.2 && < 0.21
                        , servant-server                >= 0.20.2 && < 0.21
+                       , constrained-some              >= 0.1.0  && < 0.2
     hs-source-dirs:      src
     default-language:    GHC2021
     default-extensions:  DataKinds, TypeFamilies
