--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -20,6 +20,7 @@ extra-doc-files:         CHANGELOG.md
 tested-with:             GHC == 9.4.8
                        , GHC == 9.6.4
                        , GHC == 9.8.2
+                       , GHC == 9.10.1
 
 common warnings
     ghc-options:        -Wall
