--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -33,6 +33,7 @@ library
                        , Servant.Hateoas.Rewrite
                        , Servant.Hateoas.Resource
                        , Servant.Hateoas.HasHandler
+                       , Servant.Hateoas.HasTemplateLink
                        , Servant.Hateoas.HasResourceServer
                        , Servant.Hateoas.ContentType.HAL
                        , Servant.Hateoas.ContentType.Collection
