--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -29,13 +29,17 @@ library
     import:              warnings
 
     exposed-modules:     Servant.Hateoas
-                       , Servant.Hateoas.Layer
                        , Servant.Hateoas.Resource
                        , Servant.Hateoas.HasHandler
                        , Servant.Hateoas.HasRelationLink
                        , Servant.Hateoas.HasResourceServer
+                       , Servant.Hateoas.Layer
+                       , Servant.Hateoas.Layer.Type
+                       , Servant.Hateoas.Layer.Build
+                       , Servant.Hateoas.Layer.Merge
                        , Servant.Hateoas.ContentType.HAL
                        , Servant.Hateoas.ContentType.Collection
+                       , Servant.Hateoas.Internal.Sym
                        , Servant.Hateoas.Internal.Polyvariadic
 
     other-modules:       Servant.Hateoas.Example
