--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -50,6 +50,7 @@ library
     build-depends:       base                          >= 4.17.2   && < 5
                        , aeson                         >= 2.2.3    && < 2.3
                        , text                          >= 1.2.3.0  && < 2.2
+                       , http-types                    >= 0.12.2   && < 0.13
                        , http-media                    >= 0.8.1    && < 0.9
                        , servant                       >= 0.20.2   && < 0.21
                        , servant-server                >= 0.20.2   && < 0.21
