--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -52,6 +52,7 @@ library
                        , text                          >= 1.2.3.0  && < 2.2
                        , http-types                    >= 0.12.2   && < 0.13
                        , http-media                    >= 0.8.1    && < 0.9
+                       , network-uri                   >= 2.6.1.0  && < 2.7
                        , servant                       >= 0.20.2   && < 0.21
                        , servant-server                >= 0.20.2   && < 0.21
                        , singleton-bool                >= 0.1.4    && < 0.2
