--- a/servant-hateoas.cabal
+++ b/servant-hateoas.cabal
@@ -41,6 +41,7 @@ library
                        , Servant.Hateoas.Layer.Build
                        , Servant.Hateoas.Layer.Merge
                        , Servant.Hateoas.ContentType.HAL
+                       , Servant.Hateoas.Combinator.Title
                        , Servant.Hateoas.Internal.Sym
                        , Servant.Hateoas.Internal.Polyvariadic
 
